fixing stretching

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
         font-size: 0.8rem;
     }
     .picture{
-        width: auto;
+        width: 30%;
         text-align: center;
 
     }
